--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!-- search input here -->
         <div id="search-bar-div">
           <h2 id="search-title">Search for a City</h2>
-          <input type="text" id="search-input" placeholder="City Name" />
+          <input type="search" id="search-input" placeholder="City Name" />
           <div><button id="search-btn" type="button">Search</button></div>
         </div>
 
@@ -29,7 +29,7 @@
       <!-- Main section where weather is displayed from RESTful api -->
       <section id="weather-display">
         <!-- todays forecast to be displayed here -->
-        <div id="todays-weather"><p>todays weather here</p></div>
+        <div id="todays-weather"></div>
         <!-- 5 day forecast to be displayed here in cards -->
         <div id="five-day-forecast"><p>cards here with 5 day forecast</p></div>
       </section>
@@ -39,6 +39,7 @@
     integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E="
     crossorigin="anonymous"
   ></script>
+  <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
     <script src="./assets/js/script.js"></script>
   </body>
 </html>
