got most of the info from api and diplayed on screen

--- a/index.html
+++ b/index.html
@@ -31,7 +31,19 @@
         <!-- todays forecast to be displayed here -->
         <div id="todays-weather"></div>
         <!-- 5 day forecast to be displayed here in cards -->
-        <div id="five-day-forecast"><p>cards here with 5 day forecast</p></div>
+        <div id="five-day-forecast">
+          <div id="card-1">
+          </div>
+          <div id="card-2">
+            </div>
+          <div id="card-3">
+         </div>
+          <div id="card-4">
+           </div>
+          <div id="card-5">
+           </div>
+          
+        </div>
       </section>
     </main>
     <script
