trying to figure out local storage

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <!-- search history to be displayed here from local storage -->
         <div id="search-history">
           <h2 id="history">History</h2>
+          <div id="history-displayed"></div>
         </div>
       </section>
       <!-- Main section where weather is displayed from RESTful api -->
